@@ -204,6 +204,13 @@ signal-aqua=Aqua signal
 signal-blue=Blue signal
 signal-purple=Purple signal
 signal-pink=Pink signal
-signal-white=White signal
-signal-grey=Grey signal
+signal-maroon=Maroon signal
+signal-brown=Brown signal
+signal-olive=Olive signal
+signal-emerald=Emerald signal
+signal-teal=Teal signal
+signal-navy=Navy signal
+signal-violet=Violet signal
 signal-black=Black signal
+signal-grey=Grey signal
+signal-white=White signal
